<?xml version="1.0"?>
<package name="racecar_simulator">
  <version>0.0.0</version>
  <description>A simulator of the MIT racecar.</description>

  <maintainer email="timkosto@mit.edu">timkosto</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_export_depend>ament_cmake_export_libraries</build_export_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>rclcpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>map_server</run_depend>

</package>