<?xml version="2.0"?>
<package name="racecar_simulator">
  <version>0.0.0</version>
  <description>A simulator of the MIT racecar.</description>

  <maintainer email="timkosto@mit.edu">timkosto</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_export_depend>ament_cmake_export_libraries</build_export_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>map_server</depend>

</package>